# test-Driven_Development-MCP

./: .gitignore  CHECKLIST.md  Dockerfile  GETTING_STARTED.md  README.md  WorkFlow.md  configure-nodeport-range.sh  connect-k8-mcp-to-local.sh  helmdeploy.sh  package.json  push-to-ghcr.sh  pyproject.toml  start-mcp.sh  tdd-helper.sh  tdd-mcp-test.http
.mcp/: checklist.yaml
helm/tdd-mcp/: Chart.yaml  README.md  values.yaml
helm/tdd-mcp/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
server/: main.py  requirements.txt
src/: __init__.py
src/app/: __init__.py  util.py
src/tdd_mcp_repo.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_add.py
